--- a/app/src/main/res/layout/comment_single_item.xml
+++ b/app/src/main/res/layout/comment_single_item.xml
@@ -1,75 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-
-
+ <androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+     xmlns:app="http://schemas.android.com/apk/res-auto"
+     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="30dp"
 
-    app:cardBackgroundColor="#DDDDDD">
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+     <androidx.cardview.widget.CardView
+         android:id="@+id/cardView"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+
+         android:layout_margin="10dp"
+         android:elevation="3dp"
+         app:cardBackgroundColor="#D7E7D8"
+         app:cardCornerRadius="30dp"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:layout_constraintStart_toStartOf="parent"
+         app:layout_constraintTop_toTopOf="parent"
+
+         >
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:padding="10dp">
+
+             <TextView
+                 android:id="@+id/commenterName"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_gravity="right"
+                 android:fontFamily="@font/myfont"
+                 android:padding="5dp"
+                 android:text="name namesonname names onname nameson"
+                 android:textColor="#000"
+                 android:textDirection="rtl"
+                 android:textSize="20sp"
+                 android:textStyle="bold" />
+
+
+             <TextView
+                 android:id="@+id/comment"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:fontFamily="@font/myfont"
+                 android:padding="5dp"
+                 android:text="commmmmmmmmentmment vgvfvgf"
+                 android:textDirection="rtl"
+                 android:textSize="24sp"
+
+                 />
+             <!--        <View-->
+             <!--            android:id="@+id/divider6"-->
+             <!--            android:layout_width="match_parent"-->
+             <!--            android:layout_height="1dp"-->
+             <!--            android:background="?android:attr/listDivider" />-->
+
+             <!--        <TextView-->
+             <!--            android:id="@+id/commentPostTime"-->
+             <!--            android:layout_width="wrap_content"-->
+             <!--            android:layout_height="wrap_content"-->
+             <!--            android:text="Time"-->
+             <!--            android:drawablePadding="5dp"-->
+             <!--            android:drawableLeft="@drawable/ic_date_range_black_24dp"-->
+             <!--            />-->
+
+             <TextView
+                 android:id="@+id/userId"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:visibility="gone" />
+
+             <TextView
+                 android:id="@+id/postId"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:visibility="gone" />
+
+         </LinearLayout>
+
+
+     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/commentPostTime"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="15dp">
+        android:layout_marginLeft="15dp"
 
-        <TextView
-            android:id="@+id/commenterName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="name nameson"
-            android:fontFamily="@font/myfont"
-            android:textDirection="rtl"
-            android:textSize="24sp"
-            android:padding="5dp"
-            android:textColor="@color/colorPrimaryDark"
-            />
+        android:paddingLeft="10dp"
+        android:text="Time"
+        app:layout_constraintStart_toStartOf="@+id/cardView"
 
-        <View
-            android:id="@+id/divider6"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
+        app:layout_constraintTop_toBottomOf="@id/cardView"
 
-        <TextView
-            android:id="@+id/comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="commmmmmmmment ommmmmmmmment ommmmmmmmmentommmmmmmmment vgvfvgf"
-            android:fontFamily="@font/myfont"
-            android:textDirection="rtl"
-            android:textSize="20sp"
-            android:padding="5dp"
-
-            />
-
-        <TextView
-            android:id="@+id/commentPostTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Time"
-            android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_date_range_black_24dp"
-            />
-
-        <TextView
-            android:id="@+id/userId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            />
-        <TextView
-            android:id="@+id/postId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            />
-
-    </LinearLayout>
-
-
-</androidx.cardview.widget.CardView>
+        />
+</androidx.constraintlayout.widget.ConstraintLayout>
