--- a/app/src/main/res/layout/fragment_bloggers.xml
+++ b/app/src/main/res/layout/fragment_bloggers.xml
@@ -29,11 +29,39 @@
         android:layout_centerHorizontal="true"
         android:visibility="gone"
         />
+    <LinearLayout
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+        <ImageButton
+            android:id="@+id/clearBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_close_black_24dp"
+            android:background="@drawable/bg_button"
+            android:layout_gravity="center"
+            />
+    <EditText
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_edittext"
+        android:padding="7dp"
+        android:hint="@string/search_users"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:textDirection="rtl"
+        />
 
+
+    </LinearLayout>
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/layout"
 
         >
         <androidx.recyclerview.widget.RecyclerView
