--- a/app/src/main/res/layout/fragment_comments.xml
+++ b/app/src/main/res/layout/fragment_comments.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/commentsLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_round_corner"
     app:layout_constraintCircleRadius="533dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+
+    >
 
     <FrameLayout
 
@@ -39,7 +42,7 @@
         android:layout_height="match_parent"
 
 
-        >
+        tools:listitem="@layout/comment_single_item">
 
 
     </androidx.recyclerview.widget.RecyclerView>
