--- a/app/src/main/res/layout/profile_post_single_item.xml
+++ b/app/src/main/res/layout/profile_post_single_item.xml
@@ -158,7 +158,19 @@
                     android:layout_weight="5"
                     />
 
-
+                <TextView
+                    android:id="@+id/editPost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="تعديل"
+                    android:paddingLeft="10dp"
+                    android:drawablePadding="5dp"
+                    android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
+                    android:textDirection="ltr"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    />
                 <TextView
                     android:id="@+id/deletePost"
                     android:layout_width="wrap_content"
@@ -172,6 +184,7 @@
                     android:layout_gravity="center"
                     android:visibility="gone"
                     />
+
 
             </LinearLayout>
 
