--- a/app/src/main/res/layout/comment_single_item.xml
+++ b/app/src/main/res/layout/comment_single_item.xml
@@ -81,22 +81,21 @@
                  android:layout_height="wrap_content"
                  android:visibility="gone" />
 
+             <TextView
+                 android:id="@+id/commentPostTime"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+
+
+
+                 android:paddingLeft="10dp"
+                 android:text="Time"
+                 android:elevation="10dp"
+                  />
          </LinearLayout>
 
 
      </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/commentPostTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
 
-        android:paddingLeft="10dp"
-        android:text="Time"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-
-        app:layout_constraintTop_toBottomOf="@id/cardView"
-
-        />
 </androidx.constraintlayout.widget.ConstraintLayout>
