--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="grayBackground">#3E4141</color>
 
     <color name="tag_begin">#B0D3B2</color>
-    <color name="tag_end">#548B60</color>
+    <color name="tag_end">#41694A</color>
 
     <color name="gradiant_begin">#588B54</color>
     <color name="gradiant_end">#415257</color>
