--- a/app/src/main/res/layout/fragment_bloggers.xml
+++ b/app/src/main/res/layout/fragment_bloggers.xml
@@ -15,8 +15,10 @@
         android:text="hmmm"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:textSize="20sp"
         android:visibility="gone"
+
 
         />
 
@@ -26,7 +28,9 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:visibility="gone"
         />
     <LinearLayout
@@ -45,6 +49,7 @@
             android:background="@drawable/bg_button"
             android:layout_gravity="center"
             android:layout_margin="10dp"
+            android:visibility="invisible"
             />
     <EditText
         android:id="@+id/search"
