--- a/app/src/main/res/layout/full_post.xml
+++ b/app/src/main/res/layout/full_post.xml
@@ -29,47 +29,51 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="5dp">
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Time"
-                android:paddingRight="10dp"
-                android:paddingLeft="5dp"
-                android:drawablePadding="5dp"
-                android:drawableLeft="@drawable/ic_date_range_black_24dp"
-                />
-                <View
-                    android:id="@+id/divider4"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_margin="5dp"
-                    android:background="?android:attr/listDivider" />
-                <TextView
-                    android:id="@+id/viewsCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:paddingTop="5dp">-->
+<!--            <TextView-->
+<!--                android:id="@+id/time"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Time"-->
+<!--                android:paddingRight="10dp"-->
+<!--                android:paddingLeft="5dp"-->
+<!--                android:drawablePadding="5dp"-->
+<!--                android:drawableLeft="@drawable/ic_date_range_black_24dp"-->
+<!--                />-->
+<!--                <View-->
+<!--                    android:id="@+id/divider4"-->
+<!--                    android:layout_width="1dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_margin="5dp"-->
+<!--                    android:background="?android:attr/listDivider" />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/viewsCount"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
 
-                    android:text="views"
-                    android:drawablePadding="5dp"
-                    android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"
+<!--                    android:text="views"-->
+<!--                    android:drawablePadding="5dp"-->
+<!--                    android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"-->
 
-                    android:textDirection="ltr"/>
+<!--                    android:textDirection="ltr"/>-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
         <TextView
-            android:padding="10dp"
+
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp"
             android:id="@+id/postTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="خاطرة"
             android:fontFamily="@font/myfont"
-            android:textSize="26sp"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:layout_gravity="center"
 
             />
@@ -80,14 +84,18 @@
 
 
         <TextView
-            android:padding="10dp"
+
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+
+            android:paddingBottom="5dp"
             android:id="@+id/postDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:text="فصبرٌ جميل لن تستطيع الأمّة أنْ تحقّق نهضة شاملة في حياتها ما لم تغيّر مفهومها عن الصبر، وتؤمن بأنّ الصبر هو الصبر على أداء الواجب وتحمّل المكاره في سبيل مقاومة الظلم والطغيان والترفّع عن الهموم الصغيرة من أج فصبرٌ جميل لن تستطيع الأمّة أنْ تحقّق نهضة شاملة في حياتها ما لم تغيّر مفهومها عن الصبر، وتؤمن بأنّ الصبر هو الصبر على أداء الواجب وتحمّل المكاره في سبيل مقاومة الظلم والطغيان والترفّع عن الهموم الصغيرة من أجفصبرٌ جميل لن تستطيع الأمّة أنْ تحقّق نهضة شاملة في حياتها ما لم تغيّر مفهومها عن الصبر، وتؤمن بأنّ الصبر هو الصبر على أداء الواجب وتحمّل المكاره في سبيل مقاومة الظلم والطغيان والترفّع عن الهموم الصغيرة من أج"
             android:fontFamily="@font/myfont"
-            android:textSize="20sp"
+            android:textSize="18sp"
             />
 
 
@@ -108,39 +116,74 @@
             android:layout_height="1dp"
             android:padding="10dp"/>
 
-        <HorizontalScrollView
+<!--        <HorizontalScrollView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:padding="7dp"-->
+<!--            >-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal"-->
+<!--                android:layout_gravity="right"-->
+
+
+<!--                >-->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
             android:padding="7dp"
             >
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/time"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time"
+                android:paddingRight="10dp"
+                android:paddingLeft="5dp"
+                android:drawablePadding="5dp"
+                android:layout_weight="0"
+                android:drawableLeft="@drawable/ic_date_range_black_24dp"
+                />
+            <View
+                android:id="@+id/divider4"
+                android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_gravity="right"
+                android:layout_margin="5dp"
+
+                android:background="?android:attr/listDivider" />
+            <TextView
+                android:id="@+id/viewsCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="views"
+                android:drawablePadding="5dp"
+                android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"
+
+                android:textDirection="ltr"/>
+            <Button
+                android:id="@+id/catBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:background="@drawable/bg_button_tag"
+                android:text="@string/menu_categories"
+                android:textSize="14sp"
+
+                android:textStyle="italic"
+                android:layout_weight="1"
+                android:gravity="center"
+                />
+        </LinearLayout>
 
 
-                >
-
-                <Button
-                    android:id="@+id/catBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:background="@drawable/bg_button_tag"
-                    android:text="@string/menu_categories"
-                    android:textSize="14sp"
-                    android:paddingRight="10dp"
-                    android:paddingLeft="10dp"
-                    android:textStyle="italic"
-                    android:layout_marginRight="5dp"
-                    />
 
 
 
-
-            </LinearLayout>
-        </HorizontalScrollView>
+<!--            </LinearLayout>-->
+<!--        </HorizontalScrollView>-->
 
          </LinearLayout>
 
