--- a/app/src/main/res/layout/post_single_item.xml
+++ b/app/src/main/res/layout/post_single_item.xml
@@ -28,7 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             >
             <TextView
                 android:id="@+id/time"
@@ -39,15 +39,20 @@
                 android:paddingLeft="5dp"
                 android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_date_range_black_24dp"
+                android:gravity="center"
+
                 />
         <TextView
-            android:padding="10dp"
+
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:id="@+id/postTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="خاطرة"
             android:fontFamily="@font/myfont"
-            android:textSize="26sp"
+            android:textStyle="bold"
+            android:textSize="20sp"
             />
 
         </LinearLayout>
@@ -65,14 +70,17 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
         <TextView
-            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+
+            android:paddingBottom="5dp"
             android:id="@+id/postDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="3"
             android:text="فصبرٌ جميل لن تستطيع الأمّة أنْ تحقّق نهضة شاملة في حياتها ما لم تغيّر مفهومها عن الصبر، وتؤمن بأنّ الصبر هو الصبر على أداء الواجب وتحمّل المكاره في سبيل مقاومة الظلم والطغيان والترفّع عن الهموم الصغيرة من أج"
             android:fontFamily="@font/myfont"
-            android:textSize="20sp"
+            android:textSize="16sp"
             />
 
         <TextView
