--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -29,20 +29,21 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="8dp"
-        android:layout_marginTop="70dp"
+        app:cardCornerRadius="15dp"        app:cardElevation="8dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+
+        >
 
         <TextView
             android:id="@+id/points"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:padding="13dp"
+            android:padding="7dp"
             android:text="points"
-            android:textSize="20sp"
+            android:textSize="16sp"
 
             />
     </androidx.cardview.widget.CardView>
