--- a/app/src/main/res/layout/profile_header.xml
+++ b/app/src/main/res/layout/profile_header.xml
@@ -12,15 +12,16 @@
     <ImageView
         android:id="@+id/profile_background"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="50dp"
         android:background="@drawable/bg_gradiant"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:layout_gravity="bottom"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -29,14 +30,14 @@
 
             android:layout_margin="5dp"
 
-            app:cardCornerRadius="35dp"
+            app:cardCornerRadius="23dp"
 
             >
 
             <ImageView
                 android:id="@+id/ph_profilePic"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:src="@drawable/default_profile_pic"
                 />
         </androidx.cardview.widget.CardView>
@@ -47,14 +48,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:padding="5dp"
-            android:layout_margin="10dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:layout_margin="5dp"
             android:textColor="#fff"
             android:fontFamily="@font/myfont"
+            android:textStyle="bold"
             android:background="@drawable/bg_text_overlay"
             android:text="اسم المستخدم"
             android:textDirection="rtl"
-            android:textSize="20dp" />
+            android:textSize="16dp" />
 
     </LinearLayout>
 </FrameLayout>
