--- a/app/src/main/res/layout/full_post.xml
+++ b/app/src/main/res/layout/full_post.xml
@@ -158,11 +158,26 @@
                 android:id="@+id/viewsCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0"
                 android:text="views"
                 android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_remove_red_eye_black_24dp"
 
+                android:textDirection="ltr"/>
+            <View
+                android:id="@+id/divider5"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+
+                android:background="?android:attr/listDivider" />
+            <TextView
+                android:id="@+id/commentsCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawablePadding="5dp"
+                android:drawableLeft="@drawable/ic_comment_black_24dp"
                 android:textDirection="ltr"/>
             <Button
                 android:id="@+id/catBtn"
